got the distance total working

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,5 +11,17 @@
 }
 
 .profile {
-  border: 2px solid black;
+}
+
+.card-img-top {
+  // width: 100px;
+  // height: 100px;
+}
+
+.card-link {
+  padding-right: 40px;
+}
+.card {
+  margin-top: 100px;
+  margin-right: 70px;
 }
