--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,16 @@
 
 .login {
   margin-top: 100px;
+  margin: 0 auto;
+  background-color: #EDEDED;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  border-color:#d2d2d2;
+  border-width: 5px;
+  box-shadow:0 1px 0 #cfcfcf;
 }
 
 .profile {
@@ -24,4 +34,8 @@
 .card {
   margin-top: 100px;
   margin-right: 70px;
+}
+
+body {
+  background-color: lightgrey;
 }
