--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,3 +66,40 @@ a {
 .BackButton {
   margin: 40px;
 }
+.navbar-default {
+  background-color:teal;
+  background-image: none;
+  background-repeat: no-repeat;
+ }
+
+.nav-item {
+  color: red;
+}
+
+.dog-new-title {
+  margin-top: 100px;
+}
+button {
+  margin: 0 2px 20px 2px;
+  background: none;
+  border: none;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 2px;
+  font-weight: 600;
+  font-size: 18px;
+  outline: none;
+
+  i {
+    margin-right: 5px;
+  }
+}
+
+.main-button {
+  background: #F31812;
+  border: 1px solid lighten(#F31812, 10%);
+
+  &:hover {
+    background: darken(#F31812, 10%);
+  }
+}
